# coding-agent-notifications

./: .gitignore  BLOG-DEPLOYMENT.md  CHANGELOG.md  CHANGES-SUMMARY.md  CODE-SIGNING-PROGRESS.md  CONTRIBUTING.md  DIFFERENTIATION.md  DISTRIBUTION.md  INSTALLATION-METHODS.md  INSTALLATION-OPTIONS.md  LICENSE  QUICK-START.md  README.md  SECURITY.md  SETUP-GUIDE.md  VISUAL-NOTIFICATIONS-STATUS.md  audio-notifier.yaml.example  blog-install-button.html  chevron-demo.html  claude-with-logging.sh  create-dmg.sh  homebrew-cask.rb  install-dmg.sh  install-remote.sh  install-web.sh  install.sh  log-hook.sh  notify-end.sh  package.json  select-sound.sh  smart-notify.sh  start-question-watcher.sh  toggle-sounds.sh  watch-claude-questions.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
cli/: install.js
config-editor-app/: .gitignore  CREDITS.md  CUSTOM_ICON_APPROACH.md  DO_NOT_DISTURB_OPTIONS.md  INSTALL.sh  README.md  (+33 more)
config-editor-app/src-tauri/: Cargo.toml  tauri.conf.json
config-editor-app/src-tauri/icons/: ICON-OPTIONS.md  README.md  convert-icon.sh  icon.icns  preview-icons.html
config-editor-app/src-tauri/resources/scripts/: notify-end.sh  play-tool-sound.sh  select-sound.sh  smart-notify.sh
config-editor-app/src-tauri/resources/terminal-notifier/terminal-notifier.app/Contents/: Info.plist
config-editor-app/src-tauri/resources/terminal-notifier/terminal-notifier.app/Contents/MacOS/: terminal-notifier
config-editor-app/src-tauri/resources/terminal-notifier/terminal-notifier.app/Contents/_CodeSignature/: CodeResources
config-editor-app/src-tauri/src/: main.rs
(+20 files in other folders)
